--- a/newhtml.html
+++ b/newhtml.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
     <head>
         <title>HTML & CSS</title>
 
@@ -9,7 +9,11 @@
             <nav>
             </nav>
         </header>
-        <div></div>
+        <div style ="background-color:powderblue">
+            <h4 style="background-color: bisque;">title attribute" title="this is a 'first para' in a div section">"</h4>
+            <hr>
+            <p title="this is a 'first para' in a div section">hello this shows the use of title attribute just hover your mouse here ... and we can use single qoute or diuble or viceverse in this i use <br> "__'__'__" but can be use as '__"__"__'</p>
+        </div>
 
     </body>
 </html>
